--- a/style.css
+++ b/style.css
@@ -33,3 +33,32 @@
   font-size: 20px;
   border-radius: 5px;
 }
+
+/* section1-styles */
+.section1-container {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  margin-top: 110px;
+  margin-bottom: 110px;
+}
+.sec1-img {
+  margin-left: 250px;
+}
+.sec1-text-container {
+  margin-right: 250px;
+}
+.sec1-title {
+  font-weight: 700;
+  font-size: 40px;
+  color: #151414;
+  margin-bottom: 25px;
+}
+.sec1-desc ul {
+  font-weight: 400;
+  font-size: 16px;
+  color: #444343;
+}
