section2 is added

--- a/style.css
+++ b/style.css
@@ -51,14 +51,22 @@
 .sec1-text-container {
   margin-right: 250px;
 }
-.sec1-title {
+.sec-title {
   font-weight: 700;
   font-size: 40px;
   color: #151414;
   margin-bottom: 25px;
 }
-.sec1-desc ul {
+.sec-desc ul {
   font-weight: 400;
   font-size: 16px;
   color: #444343;
+}
+
+/* section-2-styles */
+.section-2 {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.section2-container {
+  margin: 20px 400px 100px 400px;
 }
