--- a/style.css
+++ b/style.css
@@ -130,3 +130,54 @@
   border: none;
   padding: 21px 36px 20px 36px;
 }
+
+/* footer-styles */
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  gap=100px;
+  width:70%;
+  margin: auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.footer-section{
+    background-color: #151414;
+    color: white;
+    /* padding-bottom: 100px; */
+
+}
+.footer-left{
+    padding-right: 300px;
+    padding-left: 100px;
+}
+.footer-right{
+    padding-right: 100px;
+}
+.footer-left-title{
+    margin-bottom: 16px;
+}
+.footer-left-desc{
+    margin-bottom: 24px;
+}
+.footer-left-mail{
+    margin-bottom: 16px;
+}
+.footer-left-phone{
+    margin-bottom: 32px;
+}
+.footer-right-title{
+    padding-bottom: 32px;
+}
+.footer-right-email{
+    margin-bottom: 18px;
+    padding: 21px 158px 22px 21px;
+    border: none;
+    border-radius: 10px;
+
+}
+.footer-right-btn{
+    padding: 20px;
+    border-radius: 5px;
+    border: none;
+}
