--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   border: none;
   color: #005fac;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 /* section1-styles */
@@ -66,19 +66,20 @@
 
 /* section-2-styles */
 .section-2 {
-  background-color: rgba(0, 0, 0, 0.2);
+  margin-bottom: 130px;
 }
 .section2-container {
   margin: 20px 400px 150px 650px;
 }
 
 /* section3-styles */
+
 .section3-title {
   text-align: center;
   color: #151414;
   font-size: 40px;
   font-weight: 700;
-  margin-bottom: 80px;
+  margin-bottom: 50px;
 }
 .plan-container {
   display: flex;
@@ -103,6 +104,7 @@
 /* contact-styles */
 .section-4 {
   margin-bottom: 130px;
+  margin-top: 130px;
 }
 .contact {
   width: 70%;
@@ -126,7 +128,7 @@
   font-weight: 600;
   font-size: 20px;
   /* text-align: center; */
-  border-radius: 5px;
+  border-radius: 8px;
   border: none;
   padding: 21px 36px 20px 36px;
 }
@@ -135,52 +137,51 @@
 .footer-content {
   display: flex;
   justify-content: space-between;
-  gap=100px;
-  width:70%;
+  width: 70%;
   margin: auto;
   padding-top: 100px;
   padding-bottom: 100px;
 }
-.footer-section{
-    background-color: #151414;
-    color: white;
-    /* padding-bottom: 100px; */
-
+.footer-section {
+  background-color: #151414;
+  color: white;
+  /* padding-bottom: 100px; */
 }
-.footer-left{
-    padding-right: 300px;
-    padding-left: 100px;
+.footer-left {
+  padding-right: 300px;
+  padding-left: 100px;
 }
-.footer-right{
-    padding-right: 100px;
+.footer-right {
+  padding-right: 100px;
 }
-.footer-left-title{
-    margin-bottom: 16px;
+.footer-left-title {
+  margin-bottom: 16px;
 }
-.footer-left-desc{
-    margin-bottom: 24px;
+.footer-left-desc {
+  margin-bottom: 24px;
 }
-.footer-left-mail{
-    margin-bottom: 16px;
+.footer-left-mail {
+  margin-bottom: 16px;
 }
-.footer-left-phone{
-    margin-bottom: 32px;
+.footer-left-phone {
+  margin-bottom: 32px;
 }
-.footer-right-title{
-    padding-bottom: 32px;
+.footer-right-title {
+  padding-bottom: 32px;
 }
-.footer-right-email{
-    margin-bottom: 18px;
-    padding: 21px 158px 22px 21px;
-    border: none;
-    border-radius: 10px;
-
+.footer-right-email {
+  margin-bottom: 18px;
+  padding: 21px 158px 22px 21px;
+  border: none;
+  border-radius: 10px;
 }
-.footer-right-btn{
-    padding: 20px;
-    border-radius: 5px;
-    border: none;
+.footer-right-btn {
+  padding: 20px;
+  border-radius: 8px;
+  border: none;
+  background: #005fac;
+  color: white;
 }
-.socail-media{
-    margin-right: 20px;
+.socail-media {
+  margin-right: 20px;
 }
